--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -10,6 +10,16 @@
       src="https://kit.fontawesome.com/2bf1f42000.js"
       crossorigin="anonymous"
     ></script>
+    <meta property="og:title" content="KanDiscer" />
+    <meta property="og:image" content="project_pic.png" />
+    <meta
+      property="og:description"
+      content="A companion app for disc golfers"
+    />
+    <meta
+      property="og:url"
+      content="https://github.com/IanKaneshiro/KanDiscer"
+    />
   </head>
   <body>
     <div id="root"></div>
