--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,22 +4,27 @@
     <meta charset="utf-8" />
     <title>KanDiscer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="title" property="og:title" content="KanDiscer" />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://res.cloudinary.com/dmkyocbqi/image/upload/v1698366990/Screenshot_2023-10-25_194505_jyyfdf.png"
+    />
+    \
+    <meta
+      name="description"
+      property="og:description"
+      content="[Content description here]"
+    />
+
+    <meta name="author" content="[Author name here]" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script
       src="https://kit.fontawesome.com/2bf1f42000.js"
       crossorigin="anonymous"
     ></script>
-    <meta property="og:title" content="KanDiscer" />
-    <meta property="og:image" content="project_pic.png" />
-    <meta
-      property="og:description"
-      content="A companion app for disc golfers"
-    />
-    <meta
-      property="og:url"
-      content="https://github.com/IanKaneshiro/KanDiscer"
-    />
   </head>
   <body>
     <div id="root"></div>
